--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,17 @@
+# MYSQL
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/orange?serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=mysql_pw
 
+# ???? ?? ?? ??
+spring.jpa.properties.hibernate.show_sql=true
+
+# ???? ???? ??? ??? ?? ??
+spring.jpa.properties.hibernate.format_sql=true
+
+# ??? ???? ???? ??? ???? ??
+logging.level.org.hibernate.type.descriptor.sql=trace
+
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
